[package]
name = "hello_bevy"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
bevy = { version = "0.5" }

# Dependencies for native only.
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# bevy = { version = "0.5", default-features = false, features = ["bevy_winit", "render", "x11"]}
# bevy = { path = "../bevy", default-features = false, features = ["bevy_winit", "render", "x11"]}
